# skypro_kursovaya_6

./: pyproject.toml  requirements.txt
skymarket/: db.sqlite3
skymarket/ads/: admin.py  permissions.py  urls.py  views.py
skymarket/ads/ad/: filters.py  models.py  serializers.py
skymarket/ads/comment/: models.py  serializers.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py
