[tool.poetry]
name = "skypro-kursovaya-6"
version = "0.1.0"
description = ""
authors = ["flood <teranys1986@gmail.com>"]
readme = "README.md"
packages = [{include = "skypro_kursovaya_6"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.7.2"
black = "^23.3.0"
certifi = "^2023.5.7"
cffi = "^1.15.1"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
coreapi = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
